--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+      <title><%= full_title yield(:title) %></title>
   </head>  
     <%= stylesheet_link_tag    'application', media: 'all', 
     'data-turbolinks-track' => true %>
@@ -9,9 +9,13 @@
     <%= javascript_include_tag 'application', 
     'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+ <%= render 'layouts/shim' %>
   </head>
   <body>
-
-    <%= yield %>
+ <%= render 'layouts/header' %> 
+    <div class="container">
+      <%= yield %>  
+    </div>
+<%= render 'layouts/footer' %>  
   </body>
 </html>
