--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -194,3 +194,14 @@ input {
   margin-left:0;
   
 }
+.users { 
+  list-style:none;
+  margin:0;  
+  li { 
+    overflow:auto; 
+    padding:10px 0;
+    margin-bottom:1px;
+    
+  }
+  
+}
