--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,14 @@
 <footer class="footer"> 
     <small>
-        The <a href="http://www.railstutorial.org/"> Ruby on Rails Tutorial</a>
-        by <a href= "http://michaelhartle.com"> Michael Hartl</a>
+        Built along with <a href="http://www.railstutorial.org/"> Ruby on Rails Tutorial</a> by Michael Hartl.<br>
+        Repurposed by <a href= "http://anomalousdesign.com"> Grant Warren</a>
+        
     </small>
     <ul>
         <li><%=link_to "About", about_path %></li>
         <li><%=link_to "Contact", contact_path %></li>
-        <li><a href="http://news.railstutorial.org/">News</a></li>
+        <li><a href="https://github.com/Gwarren"><i class="fa fa-github fa-2x"></i></a></li>
+        <li><a href="https://twitter.com/anomalousdevs"><i class="fa fa-twitter fa-2x"></i></a></li>
+        <li><a href="https://plus.google.com/u/0/109948529319795452225/posts/p/pub"><i class="fa fa-google fa-2x"></i></a></li>
     </ul>
 </footer>
