--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,6 @@
 <div class="center jumbotron">
-    <h1>Welcome to the Sample App</h1>
-    <h2>This is the home page for the <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.</a>
+    <h1>Welcome to Mini Rails</h1>
+    <h2>Welcome to <a href="https://glacial-journey-6038.herokuapp.com/">Mini Rails</a> A twitter like app built with Rails 4.20.</a>
     </h2>
   <%=link_to"Sign Up Now", signup_path, class:"btn btn-lg btn-primary" %>  
 </div>
