--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,8 +70,13 @@ p {
                   Header
 ************************************************************************/
 .navbar-fixed-top{
-  background:linear-gradient(to top, rgba(255, 100, 75, .7),  rgba(255, 100, 75, 1));
+  background:rgba(255, 110, 85, 1);
 }
+.navbar-default .navbar-nav > li > a {
+
+  color:#fff;
+}
+
 #logo { 
 
   float:left;
